Tekton/arb-document/event/service/event-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-service-eventlistener-ingress
  namespace: micro-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx # change if using a different controller
  tls:
    - hosts:
        - nexus.aswarya.com
      secretName: aswarya-com-tls
  rules:
    - host: event.aswarya.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-document-service-listener
                port:
                  number: 9090
